--- a/public/styles.css
+++ b/public/styles.css
@@ -232,6 +232,10 @@ header {
   align-items: flex-start;
 }
 
+.working-img {
+  flex-direction: row-reverse;
+}
+
 /* Examples section */
 
 .examples-header {
